--- a/vignettes/windscape.Rmd
+++ b/vignettes/windscape.Rmd
@@ -53,7 +53,7 @@ Wind data can be downloaded from within R, or can be obtained separately and loa
 The function `cfsr_dl()` downloads hourly wind data from the Climate Forecast System Reanalysis (CFSR). In the code below, we'll import 10-m-level data for a chunk of North America for a sparse series of days distributed across a single summer. A real analysis would likely want a denser and/or longer time series. This example runs in a few minutes, but it could take hours or longer to download a more complete dataset. (Note that because this region is in the western hemisphere and CFSR uses longitudes in the 0-360 range, some shifty business is needed.)
 
 ```{r download, eval = F}
-wind <- cfsr_dl(years = 2000, months = 6:9, days = seq(1, 28, 3),
+wind <- cfsr_dl(variable = "wnd10m", years = 2000, months = 6:9, days = seq(1, 28, 3),
                 xlim = c(-120, -90) + 360, # shift longitudes to be in [0, 360] range for CFSR
                 ylim = c(30, 50)) %>%
       shift(dx = -360) # shift longitude back to the standard [-180, 180] range
